Bug 281887 - Archived-At not treated as a link
Summary: Archived-At not treated as a link
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-12 16:43 UTC by jean-gui
Modified: 2011-09-13 15:38 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.2
Sentry Crash Report:


Attachments
handle <> in Archived-At properly (767 bytes, patch)
2011-09-12 16:43 UTC, jean-gui
Details

Note You need to log in before you can comment on or make changes to this bug.
Description jean-gui 2011-09-12 16:43:26 UTC
Created attachment 63591 [details]
handle <> in Archived-At properly

Version:           unspecified (using KDE 4.6.2) 
OS:                Linux

KMail doesn't handle the header Archived-At properly if it is enclosed by < and > (which seems mandatory, per RFC 5064). If I right-click on a mail header and select "Mailing-List"->"Open Message in List Archive ()" nothing happens (notice the empty parenthesis).

I think it should be easy to fix using the function headerToAddress on line 293 of messagecore/mailinglist.cpp (from the git trunk). Attached is what I think might be a reasonable patch, but I don't know the code and don't have the tools to compile it, so it might as well be completely wrong.

Reproducible: Always

Steps to Reproduce:
Open an email that has an Archived-At header with <>
Right-click on a mail header and select "Mailing-List"->"Open Message in List Archive ()"

Actual Results:  
Nothing happens, parenthesis are empty

Expected Results:  
The archive should open in favorite browser, parenthesis shouldn't be empty

I appear to be using KMail 1.13.6 from Kubuntu 11.04, but this version is not present in the dropdown list.
Comment 1 Laurent Montel 2011-09-13 06:56:27 UTC
Hi,
Could you forward me in private a mail with this header please ?
Thanks
Comment 2 jean-gui 2011-09-13 08:48:34 UTC
Done.

FWIW, these headers are added by all W3C mailing lists (http://lists.w3.org/).

Thanks.
Comment 3 Laurent Montel 2011-09-13 11:31:03 UTC
Git commit 9b4352dae9571c2a33a5db2ec64d0f64b1422c53 by Montel Laurent.
Committed on 13/09/2011 at 13:29.
Pushed by mlaurent into branch 'master'.

Bug 281887 - Archived-At not treated as a link adapted patch from "jean-gui at w3 dot org" we can have multi urls too.

FIXED-IN: 4.7.2
BUG: 281887

M  +10   -9    messagecore/mailinglist.cpp
M  +2    -2    messagecore/mailinglist.h

http://commits.kde.org/kdepim/9b4352dae9571c2a33a5db2ec64d0f64b1422c53
Comment 4 Laurent Montel 2011-09-13 11:31:39 UTC
Git commit 5e9e9cfc55639e87e60f1387b27f3b4587500d2e by Montel Laurent.
Committed on 13/09/2011 at 13:29.
Pushed by mlaurent into branch '4.7'.

Bug 281887 - Archived-At not treated as a link adapted patch from "jean-gui at w3 dot org" we can have multi urls too.

FIXED-IN: 4.7.2
BUG: 281887
(cherry picked from commit 9b4352dae9571c2a33a5db2ec64d0f64b1422c53)

M  +10   -9    messagecore/mailinglist.cpp
M  +2    -2    messagecore/mailinglist.h

http://commits.kde.org/kdepim/5e9e9cfc55639e87e60f1387b27f3b4587500d2e
Comment 5 Torgny Nyblom 2011-09-13 14:16:22 UTC
Git commit 958e43ae91390331a3f2eaf00275396dffca3596 by Torgny Nyblom.
Committed on 13/09/2011 at 16:13.
Pushed by tnyblom into branch 'master'.

Revert "Bug 281887 - Archived-At not treated as a link adapted patch from "jean-gui at w3 dot org" we can have multi urls too."

Revert for now as this makes kdepim fail.
Missing usage in kmail/messageactions.cpp:349 and that is not something
I can fix of the top of my head.

This reverts commit 9b4352dae9571c2a33a5db2ec64d0f64b1422c53.

CCMAIL: montel@kde.org
CCBUG: 281887

M  +9    -10   messagecore/mailinglist.cpp
M  +2    -2    messagecore/mailinglist.h

http://commits.kde.org/kdepim/958e43ae91390331a3f2eaf00275396dffca3596
Comment 6 Laurent Montel 2011-09-13 15:33:50 UTC
Git commit a1fb47c812fd0e0c99b442ae47e34ce60a9f7d7c by Montel Laurent.
Committed on 13/09/2011 at 13:29.
Pushed by mlaurent into branch 'master'.

Bug 281887 - Archived-At not treated as a link adapted patch from "jean-gui at w3 dot org" we can have multi urls too.

FIXED-IN: 4.7.2
BUG: 281887
(cherry picked from commit 9b4352dae9571c2a33a5db2ec64d0f64b1422c53)

M  +10   -9    messagecore/mailinglist.cpp
M  +2    -2    messagecore/mailinglist.h

http://commits.kde.org/kdepim/a1fb47c812fd0e0c99b442ae47e34ce60a9f7d7c
Comment 7 Laurent Montel 2011-09-13 15:38:25 UTC
Git commit 61d9aeaf4611228e0933d7fd093e2cccb1bfa29c by Montel Laurent.
Committed on 13/09/2011 at 13:29.
Pushed by mlaurent into branch '4.7'.

Bug 281887 - Archived-At not treated as a link adapted patch from "jean-gui at w3 dot org" we can have multi urls too.

FIXED-IN: 4.7.2
BUG: 281887
(cherry picked from commit 9b4352dae9571c2a33a5db2ec64d0f64b1422c53)
(cherry picked from commit c677e9ecc6e202c47806a19c89882d9a5f544582)

M  +10   -9    messagecore/mailinglist.cpp
M  +2    -2    messagecore/mailinglist.h

http://commits.kde.org/kdepim/61d9aeaf4611228e0933d7fd093e2cccb1bfa29c