Bug 281887 - Archived-At not treated as a link adapted patch from "jean-gui at w3 dot org" we can have multi urls too.

FIXED-IN: 4.7.2
BUG: 281887
(cherry picked from commit 9b4352dae9571c2a33a5db2ec64d0f64b1422c53)